Material Calculation Code